tests/baselines/reference/noImplicitAnyMissingSetAccessor.errors.txt
tests/cases/compiler/noImplicitAnyMissingSetAccessor.ts(3,25): error TS7033: Property 'message' implicitly has type 'any', because its get accessor lacks a return type annotation.


==== tests/cases/compiler/noImplicitAnyMissingSetAccessor.ts (1 errors) ====
    abstract class Parent
    {
        public abstract get message();
                            ~~~~~~~
!!! error TS7033: Property 'message' implicitly has type 'any', because its get accessor lacks a return type annotation.
    }
    
    class Child extends Parent {
        public get message() {
            return "";
        }
    }